<resources>
    <string name="app_name">21Barth</string>
    <string name="app_id">62415390070</string>

    <string name="str_button" translatable="false">Change Language</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="title_activity_registro" translatable="false">Registro</string>
    <string name="title_activity_recuperar" translatable="false">Recuperar</string>
    <string name="title_activity_juego" translatable="false">Juego</string>
    <string name="title_activity_buscarp" translatable="false">Buscar</string>
    <string name="title_activity_online" translatable="false">Online</string>
    <string name="title_activity_config" translatable="false">Configurar</string>
    <string name="title_activity_ranking" translatable="false">Ranking</string>

    <string name="str_en">English</string>
    <string name="str_es">Spanish</string>
    <string-array name="languages" >
        <item>@string/str_en</item>
        <item>@string/str_es</item>
    </string-array>

    <!--- Main activity -->
    <string name="welcome">Welcome</string>
    <string name="btn_pc">Play</string>
    <string name="btn_online">Play Online</string>

    <!--- Game screen -->
    <string name="you_busted" translatable="false">You busted!</string>
    <string name="you_got_blackjack" translatable="false">You got blackjack!</string>
    <string name="dealer_busted" translatable="false">Dealer busted!</string>
    <string name="draw" translatable="false">Draw!</string>
    <string name="you_won" translatable="false">You won!</string>
    <string name="dealer_won" translatable="false">Dealer won!</string>
    <string name="deal" translatable="false">Deal</string>
    <string name="press_to_continue" translatable="false">Press to continue</string>
    <string name="press_to_start_again" translatable="false">Press to start again</string>
    <string name="game_over" translatable="false">Game over!</string>
    <string name="hit" translatable="false">Hit</string>
    <string name="stand" translatable="false">Stand</string>

    <!-- Multi-player game screen -->
    <string name="p_you_busted" translatable="false">P%d: You busted!</string>
    <string name="p_you_got_blackjack" translatable="false">P%d: You got blackjack!</string>
    <string name="p_dealer_busted" translatable="false">P%d: Dealer busted!</string>
    <string name="p_draw" translatable="false">P%d: Draw!</string>
    <string name="p_you_won" translatable="false">P%d: You won!</string>
    <string name="p_dealer_won" translatable="false">P%d: Dealer won!</string>

    <!-- Player labels -->
    <string name="current_bet_label">Bet</string>
    <string name="my_balance_label">My balance</string>

    <!-- Google Game Services -->
    <string name="signing_in">Signing in with Google</string>
    <string name="signing_out">Signing out</string>
    <string name="game_title">21Barth Online</string>
    <string name="game_blurb">Esta fase alpha de 21Barth permite jugar black jack online hasta un máximo de 2 jugadores. Para ello debe iniciar sesión.</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Error</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
</resources>
